Fixed bugs on Firefox Browser

--- a/front/openvidu-call/src/app/shared/components/dialog-choose-room/dialog-choose-room.component.css
+++ b/front/openvidu-call/src/app/shared/components/dialog-choose-room/dialog-choose-room.component.css
@@ -78,12 +78,17 @@ button {
   margin: 0px 10px;
 }
 
+#joinButtonDiv {
+  text-align: center
+}
 #joinButton {
   margin: 15px;
+  width: 80%;
 }
 
 #photoButton {
   margin: 10px;
+  text-align: center;
 }
 
 #avatarContainer {
@@ -147,8 +152,8 @@ mat-card {
   bottom: 0;
   left: 0;
   right: 0;
-  max-width: fit-content;
-  max-height: fit-content;
+  max-width: 100%;
+  max-height: 70%;
   margin: auto;
   padding: 20px;
   overflow-y: auto;
